nav dark mode fix

--- a/web/nav/css/nav-v1.2.less
+++ b/web/nav/css/nav-v1.2.less
@@ -152,6 +152,7 @@ nav {
 #subnav .separator {
 	padding: 0 6px;
 	font-size: 14px;
+	color: rgb(@color-neutral-100);
 }
 #subnav .branded {
 	text-transform: uppercase;
@@ -291,14 +292,13 @@ nav {
 	#mainnav svg {
 		fill: rgb(@color-neutral-0);
 	}
-	
-	
 	#mainnav a.hover-effect:hover > div,
 	#subnav a.hover-effect:hover > div  {
 		background-color: rgba(@color-neutral-0,.2);
 	}
-	
-	
+	#subnav .separator {
+		color: rgb(@color-neutral-0);
+	}
 }
 
 
